# salesman_problem_ga

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Destination.h  SalesmanProblem.cpp  SalesmanProblem.h  SalesmanProblemSolutionProgress.cpp  SalesmanProblemSolutionProgress.h
src/genetic_algorithm/: Creature.cpp  Creature.h  EnumChromosome.cpp  EnumChromosome.h  OptimizationProblem.h  Population.cpp  Population.h  ScoredCreature.h
tests/: test_algorithm.cpp  test_calculation_functions.cpp  test_crossingover.cpp  test_crossover.cpp  test_population.cpp
